style(punts-component): add comments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<!--nav-->
+<!--NAV-->
 <nav class="navbar navbar-expand-lg bg-dark px-5 py-4 mb-3 mb-md-5 flex-column flex-xl-row justify-content-between" style="position:relative">
     <a routerLink="/" class="d-none d-xl-inline-block">
         <img alt="logo" src="./assets/images/IMG-20230625-WA0006.jpg" style="height:90px">
