feat(map-rutes comp/serv): add modify route

--- a/src/punts/punts.component.html
+++ b/src/punts/punts.component.html
@@ -148,7 +148,7 @@
             <small
               *ngIf="marker.default == true"
               style="position: absolute; top: 12px; right: 12px"
-              >Default point</small
+              >Punt per defecte</small
             >
             <i
               *ngIf="marker.fav == true && marker.default == false"
