--- a/src/rutes/map-rutes/map-rutes.component.html
+++ b/src/rutes/map-rutes/map-rutes.component.html
@@ -110,6 +110,9 @@
               alt="mapet"
             />
             <div class="card-body">
+
+              <!--NORMAL LAYOUT-->
+              <ng-container *ngIf="selectedToModifyRouteName != ruta.name; else modifyForm">
               <div class="">
                 <b>{{ ruta.name }}</b>
               </div>
@@ -119,11 +122,65 @@
               <div class="text-crimson">
                 <b>Puntuació</b>: {{ ruta.puntuacio }}
               </div>
+              </ng-container>
+
+              <!--MODIFY RUTA FORM-->
+              <ng-template #modifyForm>
+                <form [formGroup]="modifyRutaForm" (ngSubmit)="modifyRuta(ruta)">
+                  <div>
+                    <label for="nom2" class="me-2">Nom</label>
+                    <input
+                      id="nom2"
+                      type="text"
+                      class="me-2 me-md-3 mb-3"
+                      placeholder="nom"
+                      formControlName="inputNom2"
+                      [class.is-invalid]="
+                        modifyRutaForm.get('inputNom2')!.invalid &&
+                        modifyRutaForm.get('inputNom2')!.touched
+                      "
+                    />
+
+                    <label for="puntuació" class="me-2">Puntuació</label>
+                    <input
+                      id="puntuació"
+                      type="number"
+                      class="me-2 me-md-3 mb-3"
+                      formControlName="inputPuntuacio2"
+                      [class.is-invalid]="
+                        modifyRutaForm.get('inputPuntuacio2')!.invalid &&
+                        modifyRutaForm.get('inputPuntuacio2')!.touched
+                      "
+                    />
+                  </div>
+
+                  <div>
+                    <label for="descripció2" class="me-2">Descripció</label>
+                    <input
+                      id="descripció2"
+                      tpye="text"
+                      class="me-2 me-md-3 mb-3"
+                      formControlName="inputDescripcio2"
+                      [class.is-invalid]="
+                        modifyRutaForm.get('inputPuntuacio2')!.invalid &&
+                        modifyRutaForm.get('inputPuntuacio2')!.touched
+                      "
+                    />
+                  </div>
+                  <button
+                    [disabled]="!modifyRutaForm.valid"
+                    type="submit"
+                    class="btn btn-dark"
+                  >
+                    Envia
+                  </button>
+                </form>
+              </ng-template>
             </div>
             <small
               *ngIf="ruta.default == true"
               style="position: absolute; top: 12px; right: 12px"
-              >Default point</small
+              >Ruta per defecte</small
             >
             <i
               *ngIf="ruta.fav == true && ruta.default == false"
@@ -138,6 +195,9 @@
               style="position: absolute; top: 12px; right: 12px"
             ></i>
             <div class="card-footer">
+              <button (click)="showModifyRutaForm(ruta)" class="btn btn-outline-dark text-crimson me-2">
+                Modifica
+              </button>
               <button
                 class="btn btn-outline-danger text-crimson"
                 (click)="deleteRuta(ruta.name)"
